--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- including bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flask Project</title>
+    <title>Water Availability Information</title>
 </head>
 <body>
-    <h1>Flask Project</h1>
-    <form action="{{ url_for('search') }}" method="POST">
-        <select name="dropdown">
-            <option value="option1">Option 1</option>
-            <option value="option2">Option 2</option>
-            <option value="option3">Option 3</option>
-        </select>
-        <input type="text" name="search_text" placeholder="Enter text">
-        <button type="submit">Search</button>
-    </form>
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <h1 class="text-center mb-4">Water Availability Information</h1>
+                <form action="{{ url_for('search') }}" method="POST">
+                    <div class="input-group mb-3">
+                        <select class="form-select" name="dropdown">
+                            {% for city_name in city_names %}
+                            <option value="{{ city_name }}">{{ city_name }}</option>
+                            {% endfor %}
+                        </select>
+                        <input type="text" class="form-control" name="search_text" placeholder="Enter Coordinates">
+                        <button type="submit" class="btn btn-primary">Search</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
