--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,11 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <h1 class="text-center mb-4">Water Availability Information</h1>
+                {% if error_message %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ error_message }}
+                    </div>
+                {% endif %}
                 <form action="{{ url_for('search') }}" method="POST">
                     <div class="input-group mb-3">
                         <select class="form-select" name="dropdown">
@@ -26,5 +31,6 @@
             </div>
         </div>
     </div>
+
 </body>
 </html>
